manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-ocp-app
  labels:
    app: sample-ocp-app
    backstage.io/kubernetes-id: sample-ocp-app
spec:
  selector:
    matchLabels:
      app: sample-ocp-app
  template:
    metadata:
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: sample-ocp-app
        backstage.io/kubernetes-id: sample-ocp-app
    spec:
      containers:
        - name: sample-ocp-app
          image: quay.io/pminkows/sample-ocp-app:1.0
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              memory: 1024Mi
